make reactive validation

--- a/src/assets/config/config.json
+++ b/src/assets/config/config.json
@@ -1,5 +1,6 @@
 {
   "serverProtocol": "http",
   "baseIndexHref": "/",
-  "useUserCard": false
+  "useUserCard": false,
+  "backend": "http://localhost:3000"
 }
